UCF-APR2.4/ftr main/force-app/main/default/objects/PublishGrpOrderStatusUpdate__e/PublishGrpOrderStatusUpdate__e.object-meta.xml
<CustomObject>
    <label>PublishGrpOrderStatusUpdate</label>
    <pluralLabel>PublishGrpOrderStatusUpdates</pluralLabel>
</CustomObject>