UCF-APR2.4/ftr main/force-app/main/default/objects/PublishGrpOrderStatusUpdate__e/fields/Orchestration_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Orchestration_Item_Id__c</fullName>
    <label>Orchestration_Item_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>