UCF-APR2.4/ftr main/force-app/main/default/objects/PublishGrpOrderStatusUpdate__e/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>